<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyXmpp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account"> 帐  号:</string>
    <string name="password">密  码:</string>
    <string name="username">姓  名:</string>
    <string name="confirm_password">确  认:</string>
    <string name="register">注  册</string>
    <string name="login">登  陆</string>
    <string name="friendgroups">好友分组</string>
    <string name="sendmsg">发送</string>
    <string name="msg">消息:</string>
    <string name="addfriend">添加好友</string>
    <string name="searchfriend">请输入查找好友的JID</string>
    <string name="search">查找</string>

</resources>