<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:text="@string/friendgroups"
            android:textSize="25sp" />

        <Button
            android:id="@+id/friendlist_addfriendbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addfriend" 
            android:background="@drawable/login_button_nor"
            android:layout_alignParentRight="true"
            />
        
    </RelativeLayout>

    <ListView
        android:id="@+id/friendlist_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:divider="#000000"
        android:dividerHeight="2px" />

</LinearLayout>