<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_bg" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/login_account"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:background="@drawable/input_normal"
            android:maxLength="64"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:background="@drawable/input_normal"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_register"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_nor"
            android:text="@string/register"
            android:textSize="25sp" />

        <Button
            android:id="@+id/login_login"
            android:layout_width="110dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:background="@drawable/login_btn_selector"
            android:text="@string/login"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>